--- a/tourism/app/index.html
+++ b/tourism/app/index.html
@@ -11,7 +11,7 @@
         <h1 class="title">TourApp</h1>
         <ul class="nav-links">
             <li><a href="contact/contact.html">Kontakt</a></li>
-            <li><a href="#">Ture</a></li>
+            <li><a href="ture/ture.html">Ture</a></li>
             <li><a href="#">Restorani</a></li>
         </ul>
     </nav>
@@ -20,5 +20,6 @@
         <h2>Dobrodošli na TourApp!</h2>
         <p>Naša platforma omogućava jednostavno pretragu tura i restorana na raznim lokacijama.</p>
     </section>
+    <script src="main.js"></script>
 </body>
 </html>
