feat: Prikaz restorana, forma za daodavanje

--- a/tourism/app/index.html
+++ b/tourism/app/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TourApp</title>
     <link rel="stylesheet" href="../dist/styles.css">
 </head>
+
 <body>
     <nav class="navbar">
         <h1 class="title">TourApp</h1>
         <ul class="nav-links">
             <li><a href="contact/contact.html">Kontakt</a></li>
             <li><a href="ture/ture.html">Ture</a></li>
-            <li><a href="#">Restorani</a></li>
+            <li><a href="restorani/restorani.html">Restorani</a></li>
         </ul>
     </nav>
 
@@ -22,4 +24,5 @@
     </section>
     <script src="main.js"></script>
 </body>
+
 </html>
